--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@heroicons/react": "^2.1.3",
     "@reduxjs/toolkit": "^2.2.5",
+    "@types/lodash": "^4.17.7",
+    "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-chevron": "^1.1.1",
